so jetty URIUtil is the way to go... misguided for a long time