@@ -1,9 +1,9 @@
 package org.tribbloid.spookystuff.http;
 
-import java.net.MalformedURLException;
+import org.eclipse.jetty.util.URIUtil;
+
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 
 /**
  * Created by peng on 2/4/15.
@@ -17,11 +17,7 @@ public class HttpUtils {
       uri = new URI(s);
     }
     catch (URISyntaxException e) {
-//      URL url = new URL(s);
-//      url.to
-//
-//      uri = new URI(url.getProtocol(), url.getUserInfo(), url.getHost(), url.getPort(), url.getPath(), url.getQuery(), url.getRef());
-      throw e;
+      uri = new URI(URIUtil.encodePath(s));
     }
 
     return uri.normalize();
